# last-semester

./: .gitignore
.github/workflows/: build.yml
applied-observability-seminary/: main.tex  server.py
billewicz/: bibliography.bib  main.tex
billewicz/jupyter/: Dockerfile  docker-compose.yml
billewicz/jupyter/src/: notebook.ipynb
energy_usage_prediction_web_app/: .gitignore  Dockerfile  app.py  pyproject.toml  source_notebook.ipynb
energy_usage_prediction_web_app/src/: notebook.ipynb
thesis-seminary/: thesis.tex
warsztaty-projekt/: main.tex
