[tool.poetry]
name = "energy-usage-prediction-web-app"
version = "0.1.0"
description = ""
authors = ["wint3rmute <mateusz.baczek1998@gmail.com>"]
readme = "README.md"
packages = [{include = "energy_usage_prediction_web_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.22.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
tensorflow = "^2.12.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
